-*- mode:flyspell; -*-

$Id$

Changes since v1.6
==================

o Added the entryPath() method to the entry viewer component.

o Added the entryTitle() method to the entry viewer component.

Changes since v1.5
==================

o Improved the code in the entry viewer that worked out how wide a
  horizontal scrollbar should be.

o Improved the code in the entry viewer that worked out how tall an a line
  is for a given font.

o The global finder now records the title of the guide as well as the name
  of the file.
  
Changes since v1.4
==================

o The entry viewer now properly checks that a given offset is a real short
  or long entry.

o Fixed a bug in the line parser that would cause some parts of some lines
  to not observe the current OEMToANSI setting.

Changes since v1.3
==================

o Centralised the parsing of lines in guide entries in a class hierarchy for
  handling parsing (see wegLibNGLineParser.pas).

o Replaced the parsing code in the entry viewer control with a call to one
  of the above classes.

o The non-colour mode of the entry viewer now paints monochrome versions of
  the main control codes (bold, underline, reverse).

o Replaced the guide entry control code stripping code with a call to one of
  the line parser classes.

o Exposed the OnKeyPress property of TwegLibNGEntryViewer.

Changes since v1.2
==================

o Added a function to TwegLibNortonGuide that lets you check if a given
  offset looks like a short or long entry.

Changes since v1.1
==================

o Fixed some OEM to ANSI problems with menus and see also lists. This should
  fix a problem that "ZaG" reported with Russian language guides.

Changes since v1.0
==================

o Fixed the navigation checking functions in TwegLibNGEntryViewer so that
  they don't assume that there is an entry object available all of the time.
  This fixes a bug found by Douglas Woodrow.